completed the list of projects

--- a/src/content/project/using-mdx.mdx
+++ b/src/content/project/using-mdx.mdx
@@ -1,9 +1,12 @@
 ---
-title: 'Using MDX'
+title: 'Unique Fine Pearls'
 description: 'Lorem ipsum dolor sit amet'
-pubDate: 'Jul 02 2022'
-heroImage: '/t2delastro/blog-placeholder-5.jpg'
-imgalt: 'Using MDX'
+heroImage: '/t2delastro/project/ufp.png'
+siteUrl:  'https://www.uniquefpgc.com/'
+role: 'Front-End and Back-end Development'
+platform: 'OpenCart'
+pubDate: 'Jul 08 2022'
+status: 'active'
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
